# AI-Vision-Tutorial

./: .gitignore  CMakeLists.txt  README.md  công việc tuần 1.txt  index.html  install_mediamtx.py  install_service.sh  main.cpp  setup.sh  start.sh  strip.py  yêu cầu dự án 1.txt
DetectRackProject/: .gitignore  CMakeLists.txt  index.html  main.cpp
DetectRackProject/include/: CameraStream.hpp  YOLOv8Detector.hpp
DetectRackProject/src/: RegionMonitor.cpp  YOLOv8Detector.cpp
src/: CameraStream.cpp
